# uniform-http

./: stack.yaml  uniform-http.cabal
Uniform/: Http.hs  HttpCall.hs  HttpCallWithConduit.hs  HttpGet.hs  HttpURI.hs
src/: TestMain.hs  TestingMain.hs
tests/: TestMain.hs
tests/Uniform/: HttpCallWithConduit_test.hs  HttpURI_test.hs
