name: uniform-http
version: 0.0.2.1
cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category: Data, Text, Uniform
synopsis: uniform text based operations to call http
description: http using text

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-fileio.git

library
    build-depends: base
            , bytestring
            ,text
            , HTTP
            , http-conduit
            , network-uri
-- for tests
            , HTF
            , test-invariant
-- mine
            , uniform-strings
            , uniform-error
            , uniform-algebras

    exposed-modules:
             Uniform.HttpCall
             Uniform.HttpCallWithConduit
             Uniform.HttpGet
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:

Test-Suite fileioTestAuto
    type:       exitcode-stdio-1.0
    main-is:    TestMain.hs
    build-depends: base, HTF
        -- , uniform-fileio
        , uniform-strings
        , uniform-error
        , uniform-http
    default-language: Haskell2010
    hs-source-dirs: src
